[package]
name = "syntree"
version = "0.11.0"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/udoprog/syntree"
homepage = "https://github.com/udoprog/syntree"
documentation = "https://docs.rs/syntree"
keywords = ["language", "syntax-tree"]
categories = ["parsing"]
description = """
A memory efficient syntax tree for language developers.
"""

# Avoid loading benches from the benches directory so we can add more
# dependencies in there which would otherwise hog down testing this crate.
autobenches = false

[dev-dependencies]
anyhow = "1.0"
thiserror = "1.0"
codespan-reporting = "0.11.1"

[workspace] 
members = [
    "benches",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
